--- a/src/components/BriefInformation/BriefInformation.module.scss
+++ b/src/components/BriefInformation/BriefInformation.module.scss
@@ -10,12 +10,15 @@
   width: 60%;
   border: 1px solid $white;
   border-radius: 5px;
-  @media (max-width: 426px) {
+  @media (max-width: 700px) {
     width: 90%;
   }
   .title {
     @include fontTitle;
     color: $white;
+    @media (max-width: 426px) {
+      font-size: 30px;
+    }
   }
   .text {
     @include fontText;
